--- a/assets/dev/scss/editor/_compatibility.scss
+++ b/assets/dev/scss/editor/_compatibility.scss
@@ -38,7 +38,7 @@ body.qazana-editor-active {
 #qazana {
 
 	// Prevent external animate.css embed which causing elements overlay issue
-	.animated {
+	.qazana-animated {
 		animation-fill-mode: none !important;
 	}
 
