animation hanlder, new split text lib

--- a/assets/dev/scss/frontend/_animate.scss
+++ b/assets/dev/scss/frontend/_animate.scss
@@ -1,5 +1,4 @@
 // Global style for animate.css
-
 .qazana-perspective {
     perspective: 1800px;
 }
@@ -16,629 +15,18 @@
     white-space: nowrap;
 }
 
-.qazana-hover-animation-grow {
-    transition-duration: 0.3s;
-    transition-property: transform;
-}
-
-.qazana-hover-animation-grow:active,
-.qazana-hover-animation-grow:focus,
-.qazana-hover-animation-grow:hover {
-    transform: scale(1.1);
-}
-
-.qazana-hover-animation-shrink {
-    transition-duration: 0.3s;
-    transition-property: transform;
-}
-
-.qazana-hover-animation-shrink:active,
-.qazana-hover-animation-shrink:focus,
-.qazana-hover-animation-shrink:hover {
-    transform: scale(0.9);
-}
-
-@keyframes qazana-hover-animation-pulse {
-    25% {
-        transform: scale(1.1);
-    }
-
-    75% {
-        transform: scale(0.9);
+[data-custom-animations=true] {
+    visibility: hidden;
+    opacity: 0;
+    &.qazana-animation-initialized {
+        visibility: visible;
+        opacity: 1;
     }
 }
 
-.qazana-hover-animation-pulse:active,
-.qazana-hover-animation-pulse:focus,
-.qazana-hover-animation-pulse:hover {
-    animation-name: qazana-hover-animation-pulse;
-    animation-duration: 1s;
-    animation-timing-function: linear;
-    animation-iteration-count: infinite;
-}
-
-@keyframes qazana-hover-animation-pulse-grow {
-    to {
-        transform: scale(1.1);
-    }
-}
-
-.qazana-hover-animation-pulse-grow:active,
-.qazana-hover-animation-pulse-grow:focus,
-.qazana-hover-animation-pulse-grow:hover {
-    animation-name: qazana-hover-animation-pulse-grow;
-    animation-duration: 0.3s;
-    animation-timing-function: linear;
-    animation-iteration-count: infinite;
-    animation-direction: alternate;
-}
-
-@keyframes qazana-hover-animation-pulse-shrink {
-    to {
-        transform: scale(0.9);
-    }
-}
-
-.qazana-hover-animation-pulse-shrink:active,
-.qazana-hover-animation-pulse-shrink:focus,
-.qazana-hover-animation-pulse-shrink:hover {
-    animation-name: qazana-hover-animation-pulse-shrink;
-    animation-duration: 0.3s;
-    animation-timing-function: linear;
-    animation-iteration-count: infinite;
-    animation-direction: alternate;
-}
-
-@keyframes qazana-hover-animation-push {
-    50% {
-        transform: scale(0.8);
-    }
-
-    100% {
-        transform: scale(1);
-    }
-}
-
-.qazana-hover-animation-push:active,
-.qazana-hover-animation-push:focus,
-.qazana-hover-animation-push:hover {
-    animation-name: qazana-hover-animation-push;
-    animation-duration: 0.3s;
-    animation-timing-function: linear;
-    animation-iteration-count: 1;
-}
-
-@keyframes qazana-hover-animation-pop {
-    50% {
-        transform: scale(1.2);
-    }
-}
-
-.qazana-hover-animation-pop:active,
-.qazana-hover-animation-pop:focus,
-.qazana-hover-animation-pop:hover {
-    animation-name: qazana-hover-animation-pop;
-    animation-duration: 0.3s;
-    animation-timing-function: linear;
-    animation-iteration-count: 1;
-}
-
-.qazana-hover-animation-bounce-in {
-    transition-duration: 0.5s;
-}
-
-.qazana-hover-animation-bounce-in:active,
-.qazana-hover-animation-bounce-in:focus,
-.qazana-hover-animation-bounce-in:hover {
-    transform: scale(1.2);
-    transition-timing-function: cubic-bezier(0.47, 2.02, .31, -.36);
-}
-
-.qazana-hover-animation-bounce-out {
-    transition-duration: 0.5s;
-}
-
-.qazana-hover-animation-bounce-out:active,
-.qazana-hover-animation-bounce-out:focus,
-.qazana-hover-animation-bounce-out:hover {
-    transform: scale(0.8);
-    transition-timing-function: cubic-bezier(0.47, 2.02, .31, -.36);
-}
-
-.qazana-hover-animation-rotate {
-    transition-duration: 0.3s;
-    transition-property: transform;
-}
-
-.qazana-hover-animation-rotate:active,
-.qazana-hover-animation-rotate:focus,
-.qazana-hover-animation-rotate:hover {
-    transform: rotate(4deg);
-}
-
-.qazana-hover-animation-grow-rotate {
-    transition-duration: 0.3s;
-    transition-property: transform;
-}
-
-.qazana-hover-animation-grow-rotate:active,
-.qazana-hover-animation-grow-rotate:focus,
-.qazana-hover-animation-grow-rotate:hover {
-    transform: scale(1.1) rotate(4deg);
-}
-
-.qazana-hover-animation-float {
-    transition-duration: 0.3s;
-    transition-property: transform;
-    transition-timing-function: ease-out;
-}
-
-.qazana-hover-animation-float:active,
-.qazana-hover-animation-float:focus,
-.qazana-hover-animation-float:hover {
-    transform: translateY(-8px);
-}
-
-.qazana-hover-animation-sink {
-    transition-duration: 0.3s;
-    transition-property: transform;
-    transition-timing-function: ease-out;
-}
-
-.qazana-hover-animation-sink:active,
-.qazana-hover-animation-sink:focus,
-.qazana-hover-animation-sink:hover {
-    transform: translateY(8px);
-}
-
-@keyframes qazana-hover-animation-bob {
-    0% {
-        transform: translateY(-8px);
-    }
-
-    50% {
-        transform: translateY(-4px);
-    }
-
-    100% {
-        transform: translateY(-8px);
-    }
-}
-
-@keyframes qazana-hover-animation-bob-float {
-    100% {
-        transform: translateY(-8px);
-    }
-}
-
-.qazana-hover-animation-bob:active,
-.qazana-hover-animation-bob:focus,
-.qazana-hover-animation-bob:hover {
-    animation-name: qazana-hover-animation-bob-float, qazana-hover-animation-bob;
-    animation-duration: 0.3s, 1.5s;
-    animation-delay: 0s, 0.3s;
-    animation-timing-function: ease-out, ease-in-out;
-    animation-iteration-count: 1, infinite;
-    animation-fill-mode: forwards;
-    animation-direction: normal, alternate;
-}
-
-@keyframes qazana-hover-animation-hang {
-    0% {
-        transform: translateY(8px);
-    }
-
-    50% {
-        transform: translateY(4px);
-    }
-
-    100% {
-        transform: translateY(8px);
-    }
-}
-
-@keyframes qazana-hover-animation-hang-sink {
-    100% {
-        transform: translateY(8px);
-    }
-}
-
-.qazana-hover-animation-hang:active,
-.qazana-hover-animation-hang:focus,
-.qazana-hover-animation-hang:hover {
-    animation-name: qazana-hover-animation-hang-sink, qazana-hover-animation-hang;
-    animation-duration: 0.3s, 1.5s;
-    animation-delay: 0s, 0.3s;
-    animation-timing-function: ease-out, ease-in-out;
-    animation-iteration-count: 1, infinite;
-    animation-fill-mode: forwards;
-    animation-direction: normal, alternate;
-}
-
-.qazana-hover-animation-skew {
-    transition-duration: 0.3s;
-    transition-property: transform;
-}
-
-.qazana-hover-animation-skew:active,
-.qazana-hover-animation-skew:focus,
-.qazana-hover-animation-skew:hover {
-    transform: skew(-10deg);
-}
-
-.qazana-hover-animation-skew-forward {
-    transition-duration: 0.3s;
-    transition-property: transform;
-    transform-origin: 0 100%;
-}
-
-.qazana-hover-animation-skew-forward:active,
-.qazana-hover-animation-skew-forward:focus,
-.qazana-hover-animation-skew-forward:hover {
-    transform: skew(-10deg);
-}
-
-.qazana-hover-animation-skew-backward {
-    transition-duration: 0.3s;
-    transition-property: transform;
-    transform-origin: 0 100%;
-}
-
-.qazana-hover-animation-skew-backward:active,
-.qazana-hover-animation-skew-backward:focus,
-.qazana-hover-animation-skew-backward:hover {
-    transform: skew(10deg);
-}
-
-@keyframes qazana-hover-animation-wobble-vertical {
-    16.65% {
-        transform: translateY(8px);
-    }
-
-    33.3% {
-        transform: translateY(-6px);
-    }
-
-    49.95% {
-        transform: translateY(4px);
-    }
-
-    66.6% {
-        transform: translateY(-2px);
-    }
-
-    83.25% {
-        transform: translateY(1px);
-    }
-
-    100% {
-        transform: translateY(0);
-    }
-}
-
-.qazana-hover-animation-wobble-vertical:active,
-.qazana-hover-animation-wobble-vertical:focus,
-.qazana-hover-animation-wobble-vertical:hover {
-    animation-name: qazana-hover-animation-wobble-vertical;
-    animation-duration: 1s;
-    animation-timing-function: ease-in-out;
-    animation-iteration-count: 1;
-}
-
-@keyframes qazana-hover-animation-wobble-horizontal {
-    16.65% {
-        transform: translateX(8px);
-    }
-
-    33.3% {
-        transform: translateX(-6px);
-    }
-
-    49.95% {
-        transform: translateX(4px);
-    }
-
-    66.6% {
-        transform: translateX(-2px);
-    }
-
-    83.25% {
-        transform: translateX(1px);
-    }
-
-    100% {
-        transform: translateX(0);
-    }
-}
-
-.qazana-hover-animation-wobble-horizontal:active,
-.qazana-hover-animation-wobble-horizontal:focus,
-.qazana-hover-animation-wobble-horizontal:hover {
-    animation-name: qazana-hover-animation-wobble-horizontal;
-    animation-duration: 1s;
-    animation-timing-function: ease-in-out;
-    animation-iteration-count: 1;
-}
-
-@keyframes qazana-hover-animation-wobble-to-bottom-right {
-    16.65% {
-        transform: translate(8px, 8px);
-    }
-
-    33.3% {
-        transform: translate(-6px, -6px);
-    }
-
-    49.95% {
-        transform: translate(4px, 4px);
-    }
-
-    66.6% {
-        transform: translate(-2px, -2px);
-    }
-
-    83.25% {
-        transform: translate(1px, 1px);
-    }
-
-    100% {
-        transform: translate(0, 0);
-    }
-}
-
-.qazana-hover-animation-wobble-to-bottom-right:active,
-.qazana-hover-animation-wobble-to-bottom-right:focus,
-.qazana-hover-animation-wobble-to-bottom-right:hover {
-    animation-name: qazana-hover-animation-wobble-to-bottom-right;
-    animation-duration: 1s;
-    animation-timing-function: ease-in-out;
-    animation-iteration-count: 1;
-}
-
-@keyframes qazana-hover-animation-wobble-to-top-right {
-    16.65% {
-        transform: translate(8px, -8px);
-    }
-
-    33.3% {
-        transform: translate(-6px, 6px);
-    }
-
-    49.95% {
-        transform: translate(4px, -4px);
-    }
-
-    66.6% {
-        transform: translate(-2px, 2px);
-    }
-
-    83.25% {
-        transform: translate(1px, -1px);
-    }
-
-    100% {
-        transform: translate(0, 0);
-    }
-}
-
-.qazana-hover-animation-wobble-to-top-right:active,
-.qazana-hover-animation-wobble-to-top-right:focus,
-.qazana-hover-animation-wobble-to-top-right:hover {
-    animation-name: qazana-hover-animation-wobble-to-top-right;
-    animation-duration: 1s;
-    animation-timing-function: ease-in-out;
-    animation-iteration-count: 1;
-}
-
-@keyframes qazana-hover-animation-wobble-top {
-    16.65% {
-        transform: skew(-12deg);
-    }
-
-    33.3% {
-        transform: skew(10deg);
-    }
-
-    49.95% {
-        transform: skew(-6deg);
-    }
-
-    66.6% {
-        transform: skew(4deg);
-    }
-
-    83.25% {
-        transform: skew(-2deg);
-    }
-
-    100% {
-        transform: skew(0);
-    }
-}
-
-.qazana-hover-animation-wobble-top {
-    transform-origin: 0 100%;
-}
-
-.qazana-hover-animation-wobble-top:active,
-.qazana-hover-animation-wobble-top:focus,
-.qazana-hover-animation-wobble-top:hover {
-    animation-name: qazana-hover-animation-wobble-top;
-    animation-duration: 1s;
-    animation-timing-function: ease-in-out;
-    animation-iteration-count: 1;
-}
-
-@keyframes qazana-hover-animation-wobble-bottom {
-    16.65% {
-        transform: skew(-12deg);
-    }
-
-    33.3% {
-        transform: skew(10deg);
-    }
-
-    49.95% {
-        transform: skew(-6deg);
-    }
-
-    66.6% {
-        transform: skew(4deg);
-    }
-
-    83.25% {
-        transform: skew(-2deg);
-    }
-
-    100% {
-        transform: skew(0);
-    }
-}
-
-.qazana-hover-animation-wobble-bottom {
-    transform-origin: 100% 0;
-}
-
-.qazana-hover-animation-wobble-bottom:active,
-.qazana-hover-animation-wobble-bottom:focus,
-.qazana-hover-animation-wobble-bottom:hover {
-    animation-name: qazana-hover-animation-wobble-bottom;
-    animation-duration: 1s;
-    animation-timing-function: ease-in-out;
-    animation-iteration-count: 1;
-}
-
-@keyframes qazana-hover-animation-wobble-skew {
-    16.65% {
-        transform: skew(-12deg);
-    }
-
-    33.3% {
-        transform: skew(10deg);
-    }
-
-    49.95% {
-        transform: skew(-6deg);
-    }
-
-    66.6% {
-        transform: skew(4deg);
-    }
-
-    83.25% {
-        transform: skew(-2deg);
-    }
-
-    100% {
-        transform: skew(0);
-    }
-}
-
-.qazana-hover-animation-wobble-skew:active,
-.qazana-hover-animation-wobble-skew:focus,
-.qazana-hover-animation-wobble-skew:hover {
-    animation-name: qazana-hover-animation-wobble-skew;
-    animation-duration: 1s;
-    animation-timing-function: ease-in-out;
-    animation-iteration-count: 1;
-}
-
-@keyframes qazana-hover-animation-buzz {
-    50% {
-        transform: translateX(3px) rotate(2deg);
-    }
-
-    100% {
-        transform: translateX(-3px) rotate(-2deg);
-    }
-}
-
-.qazana-hover-animation-buzz:active,
-.qazana-hover-animation-buzz:focus,
-.qazana-hover-animation-buzz:hover {
-    animation-name: qazana-hover-animation-buzz;
-    animation-duration: 0.15s;
-    animation-timing-function: linear;
-    animation-iteration-count: infinite;
-}
-
-@keyframes qazana-hover-animation-buzz-out {
-    10% {
-        transform: translateX(3px) rotate(2deg);
-    }
-
-    20% {
-        transform: translateX(-3px) rotate(-2deg);
-    }
-
-    30% {
-        transform: translateX(3px) rotate(2deg);
-    }
-
-    40% {
-        transform: translateX(-3px) rotate(-2deg);
-    }
-
-    50% {
-        transform: translateX(2px) rotate(1deg);
-    }
-
-    60% {
-        transform: translateX(-2px) rotate(-1deg);
-    }
-
-    70% {
-        transform: translateX(2px) rotate(1deg);
-    }
-
-    80% {
-        transform: translateX(-2px) rotate(-1deg);
-    }
-
-    90% {
-        transform: translateX(1px) rotate(0);
-    }
-
-    100% {
-        transform: translateX(-1px) rotate(0);
-    }
-}
-
-.qazana-hover-animation-buzz-out:active,
-.qazana-hover-animation-buzz-out:focus,
-.qazana-hover-animation-buzz-out:hover {
-    animation-name: qazana-hover-animation-buzz-out;
-    animation-duration: 0.75s;
-    animation-timing-function: linear;
-    animation-iteration-count: 1;
-}
-
-.qazana-hover-animation-shadow-bottom {
-    transition: border-color 0.2s ease-in-out, box-shadow 0.3s ease, background-color 0.4s ease;
-}
-
-.qazana-hover-animation-shadow-bottom:active,
-.qazana-hover-animation-shadow-bottom:focus,
-.qazana-hover-animation-shadow-bottom:hover {
-    box-shadow: 0 10px 27px 0 rgba(0, 0, 0, 0.1) !important;
-    border-color: transparent !important;
-}
-
-.qazana-hover-animation-no-shadow {
-    transition: transform 0.2s ease, box-shadow 0.3s ease;
-
-    .qazana-widget-container {
-        transition: box-shadow 0.3s ease;
-    }
-}
-
-.qazana-hover-animation-no-shadow:active,
-.qazana-hover-animation-no-shadow:focus,
-.qazana-hover-animation-no-shadow:hover {
-    box-shadow: none !important;
-    transform: translateY(-2px);
-
-    .qazana-widget-container {
-        box-shadow: none !important;
+[data-split-text] {
+    visibility: hidden;
+    &.qazana-split-text-applied {
+        visibility: visible;
     }
 }
