--- a/assets/dev/scss/frontend/_loader.scss
+++ b/assets/dev/scss/frontend/_loader.scss
@@ -1,4 +1,5 @@
 .qazana-has-loading-indicator {
+    position: relative;
 
     .qazana-loading-indicator {
         position: absolute;
@@ -6,6 +7,7 @@
         top: 50%;
         margin-left: -27px;
         margin-top: -27px;
+        z-index: 10;
     }
 
     .qazana-widget-container {
